add get files by table & rowId endpoint
